# AeroApps

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake_it  collocate_tropo_mpl_v1.py  components.yaml  f_collocate_modules_1.py
src/Applications/GAAS_App/: CMakeLists.txt  GNUmakefile  aerdt_l2a.pcf  aerdt_l2a.py  ana.rc  ana.rc.tmpl  ana_aod.F  ana_aod.j.tmpl  ana_aodens.rc  aod_data.py  aod_l2a-calculon.pcf  aod_l2a-irods.pcf  aod_l2a.pcf.tmpl  aod_l2a.py  aod_l3a.pcf  aod_util.F90  avhrr_l2a.pcf  avhrr_l2a.pcf.tmpl  geo04_l2a.py  geo04_nnr.py  get_aero_obs.csh  m_obs.F90  m_sqc.F90  modis_l2a.pcf  modis_l2a.pcf.tmpl  modis_l2a.py  mpana_aod.F90  mxd04_l2a.py  mxd04_nnr.py  mxd04_unbias.py  obs.rc  odsqc.F90  psas.rc  run_gaas_ana.csh  ut_get_aero_obs.j  viirs_l2a.pcf  viirs_l2a.py  vx04_l2a.py  vx04_nnr.py
src/Applications/GAAS_App/CVS/: Entries  Repository
src/Components/: CMakeLists.txt  GNUmakefile
src/Components/AOCH/: CALTROP_overlap_4.1.py  CALTROP_overlap_4.25.py  extract_merra_along_caliop_1.py  plotcurtain_log_Level2_v2.py  wrapper_CALTROP_4.1.py  wrapper_triple_collocation_1.py
src/Components/AOCH/IOWA/: CALTROP_overlap_4.1.py  CALTROP_overlap_4.25.py  collocated_MERRA-CALIOP-IOWA_3.2.py  f_collocate_modules_1.py  plotcurtain_log_Level2_v2.py  wrapper_CALTROP_4.1.py  wrapper_triple_collocation_1.py
src/Components/AOCH/MPL/: f_collocate_1.py  f_find_orbits_1.py  list_mpl_sites.txt  mpl_readL1.5_and_plot_1.py
src/Components/CVS/: Entries  Repository
src/Components/MCARS/DISORT_setup_app/: AOP_Mod.F90  CKD_common.f90  DISORT_setup.f90  DISORT_solver.f90  ErrorHandle.h  ErrorHandleMod.F90  GNUmakefile  LINPAK.f  corrK_profile.f90  ct_ancillary.f90  dis_global_pars.f90  dis_rayleigh.f90  disort_ancillary.F90  general_array_io.f90  geos5_io_module.f90  global_model_grids.f90  makefile_no_aerolib  modis1.f90  (+26 more)
src/Components/RTSI/: GNUmakefile
src/Components/cda/: CMakeLists.txt
src/Components/clouds/: Aero_py.F90  Aod_MODIS_Clouds.rc  GNUmakefile  ICA_py.F90  README  Re-Exploratory.ipynb  edge-ica.ddf  ica.py  mcs.py  mcsRegrid_py.F90  mcs_aero.py  mod_GaussianCopula.F90  mod_consts.F90  mod_eswi.F90  mod_reff.F90  mod_utils.F90  qsat_Mod.F90  renn.py
src/Components/dee/: GNUmakefile  dee_gaplot-xy.py  dee_mm.py  deep.py  duem_py.F90  ginoux.udxt  ginoux5.gsf  go.gs  lats4d.gs  m2_anom.py  m2_mm.py
src/Components/geo_vlidort/: GNUmakefile  LIDORT_BRDF_MODIS.F90  VLIDORT_BRDF_CX.F90  VLIDORT_BRDF_MODIS.F90  VLIDORT_BRDF_MODIS_BPDF.F90  VLIDORT_LAMBERT.F90  VLIDORT_LAMBERT_BPDF.F90  VLIDORT_MieMod.F90  VLIDORT_ROT.F90  VLIDORT_SURFACE.F90  cloud_MieMod.F90  geo_angles.F90  geo_angles_cloud.F90  geo_lidort.F90  geo_sampler.py  geo_surface.F90  geo_vlidort.F90  geo_vlidort_AI.F90  geo_vlidort_AI_lc2.py  geo_vlidort_blacksurf.F90  geo_vlidort_blksurf_lc2.py  geo_vlidort_cloud.F90  geo_vlidort_cloud_lc2.py  geo_vlidort_lc2.py  geo_vlidort_multinode.F90  geo_vlidort_ocean.F90  geo_vlidort_ocean_lc2.py  geo_vlidort_pars.F90  geo_vlidort_surface.F90  geo_vlidort_vnncLUTo.F90  mp_netcdf_Mod.F90  netcdf_Mod.F90  run_geo_vlidort_AI_lc2.py  run_geo_vlidort_cloud_lc2.py  run_geo_vlidort_lc2.py  run_geo_vlidort_ocean_lc2.py  sys_tracker.c
src/Components/gritas/: etc.f  grisas.f  gritas.f  gritas_amsua.rc  gritas_goessond.rc  gritas_upconv.rc  gritas_upconv2.rc  m_gritas_grids.f  rdel.f  stdio.h
src/Components/hitran/: get_hitran_crs_plus.f90  hitran08-parsum.resorted
src/Components/lagranto/: GNUmakefile
src/Components/leo_vlidort/: GNUmakefile  LidarAngles_py.F90  READ_NC_py.F90  READ_PAR_py.F90  VLIDORT_POLAR_py.F90  benchmark_polar_vlidort.py  brdf_mcd43c_sampler.py  copyvar.py  leo_vlidort_cloud.F90  leo_vlidort_lc.py  lidar_vlidort.py  mcd12c.py  met_Nv.rc  met_Nv_opendap.rc  polar_aero_dist.py  polar_vlidort.pcf  polar_vlidort.py  run_ext_sampler.py  run_lidar_sampler.py  run_lidar_vlidort.py  vlidort.py
src/Components/lidar_vlidort/: Aod_EOS.rc  GNUmakefile  VLIDORT_LIDAR_py.F90  aer_Nv.rc  aop_sampler.py  batch_lidar_sampler.py  calipso.tle  chm_Nv_opendap.rc  iss.tle  lidar.pcf  lidar_ndvi-discover.pcf  lidar_ndvi.pcf  lidar_omi_ler.pcf  lidar_sampler.pcf  lidar_sampler.py  mcd12c-discover.pcf  mcd12c.pcf  mcd12c.py  mcd43c-discover.pcf  mcd43c.pcf  mcd43c.py  mcd43c_sampler.py  omi_ler-discover.rc  pace_675.tle  polar_vlidort.py  polar_vlidort_CALIPSO_1650.pcf  polar_vlidort_CALIPSO_388.pcf  polar_vlidort_CALIPSO_410.pcf  run_lidar_sampler.j  run_lidar_sampler.py  run_polar_vlidort.py
src/Components/misc/: CMakeLists.txt
src/Components/missions/: CMakeLists.txt
src/Components/orbits/: GNUmakefile  glint_mod.F90  tle_sampler.py  tle_sampler.rc  ut_glint.F90
src/Components/qfed/: CMakeLists.txt  ChangeLog  GNUmakefile  LockPlume_Mod.F90  LockPlume_py.F90  PlumeRise.h  PlumeRise_ConstMod.F90  PlumeRise_Mod.F90  PlumeRise_py.F90  crtmmodis_py.F90  daotovs.rc  qfed_l2b.py  qfed_l2c.py  qfed_l3a.py  qfed_l3b.py  qfed_l3c.py  qsat_Mod.F90  tausfc_py.F90
src/Components/rtms/: CMakeLists.txt
src/Components/scat/: Aod_PACE.rc  CATS_simul.py  GNUmakefile  Mie_py.F90  VLIDORT_OMI_py.F90  VLIDORT_py.F90  calipso_simul.py  check_ods.py  mxd04_simul.py  mxd04_simul_vector.py  omi.j  omi.py  omi_l2a_simul.py  omi_l3a.py  pace_simul.py  sample_omaeruv.py  test_gfio.py  vlidort.py
src/Components/sixsv/: GNUmakefile  sixsv_py.F90
src/Components/stn_vlidort/: Aod_EOS.rc  GNUmakefile  VLIDORT_STN_py.F90  VLIDORT_py.F90  aeronet_vlidort.py  batch_stn_sampler.py  directsun_vlidort.py  ext_sampler.py  ext_stn_vlidort_sampler.py  g5nr_stn_sampler.py  mcd12c-discover.pcf  mcd12c.pcf  mcd12c.py  mcd12c_sampler.py  mcd43c-discover.pcf  mcd43c.pcf  mcd43c.py  mcd43c_sampler.py  mcd43c_stn_sampler.py  myd13c2-discover.rc  run_aeronet_vlidort.py  run_g5nr_stn_sampler.py  run_stn_sampler.j  run_stn_sampler.py  run_stn_sampler_invariant.py  run_stn_vlidort.py  stnAngles_py.F90  stn_ndvi-discover.pcf  stn_ndvi.pcf  stn_sampler.pcf  stn_vlidort.py  stn_vlidort_aux.py
src/Shared/GMAO_Shared/: .gitignore  CMakeLists.txt  still_toport.py
(+4208 files in other folders)
